--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main class="container">
         <section id="inicio" class="hero">
-            <h2>Bienvenido a nuestro sitio</h2>
+            <h2>Bienvenido Grupo de Ingenieria y servicios de software</h2>
             <p>Este es un ejemplo básico de una página HTML con CSS externo.</p>
             <button class="btn-primary">Más información</button>
         </section>
@@ -52,7 +52,7 @@
         <section id="nosotros" class="about">
             <h2><i class="fas fa-info-circle"></i> Acerca de Nosotros</h2>
             <div class="about-content">
-                <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Oficina moderna">
+                <img src="./imagenes/oficina1.png" alt="Oficina moderna">
                 <div class="about-text">
                     <h3>Nuestra Historia</h3>
                     <p>Somos una empresa dedicada al desarrollo web desde 2020. Creemos en la creación de experiencias digitales únicas y funcionales.</p>
