--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main class="container">
         <section id="inicio" class="hero">
-            <h2>Bienvenido a nuestro sitio</h2>
+            <h2>Bienvenido a nuestro sitio Estamos en construcción</h2>
             <p>Este es un ejemplo básico de una página HTML con CSS externo.</p>
             <button class="btn-primary">Más información</button>
         </section>
