--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <h1><i class="fas fa-globe"></i> Mi Sitio Web</h1>
+            <h1><i class="fas fa-globe"></i> Nuestro sitio</h1>
             <nav>
                 <ul>
                     <li><a href="#inicio"><i class="fas fa-home"></i> Inicio</a></li>
@@ -23,7 +23,7 @@
 
     <main class="container">
         <section id="inicio" class="hero">
-            <h2>Bienvenido Grupo de Ingenieria y servicios de software</h2>
+            <h2>Bienvenido a Ingenieria y servicios de software</h2>
             <p>Este es un ejemplo básico de una página HTML con CSS externo.</p>
             <button class="btn-primary">Más información</button>
         </section>
